<resources>
    <string name="app_name">1902SoftwareTechExam</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">SIGN UP</string>

</resources>